examples/test/testpolicy16419.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16419
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key14: value43
      key35: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value31
          key5: value30
      podSelector:
        matchLabels:
          key25: value32
          key29: value19
          key47: value49
